2003-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure:
	* unix/tcl.m4: improve AIX --enable-64bit handling

2003-11-10  Don Porter  <dgp@users.sourceforge.net>

	* tests/unixInit.test (unixInit-2.10): re-enabled.
	* unix/tclUnixInit.c (TclpInitLibraryPath):	Alternative fix
	* win/tclWinInit.c (TclpInitLibraryPath):	for [Bug 832657]
	that should not run afoul of startup constraints.

	* library/dde/pkgIndex.tcl:	Added safeguards so that registry
	* library/reg/pkgIndex.tcl:	and dde packages are not offered
	* win/tclWinDde.c:	on non-Windows platforms.  Bumped to
	* win/tclWinReg.c:	registry 1.1.3 and dde 1.2.2.

2003-11-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/unixInit.test (unixInit-2.10): mark as knownBug
	* generic/tclEncoding.c (TclFindEncodings): revert patch from
	2003-11-05.  It wasn't valid in the sensitive startup init phase
	and broke Windows from working at all.

2003-11-07  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: optimized builds define NDEBUG to turn off
	ThreadAlloc range checking.

2003-11-05  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclEncoding.c (TclFindEncodings):	Normalize the path
	of the executable before passing to TclpInitLibraryPath() to avoid
	buggy handling of paths containing "..".  [Bug 832657]
	* tests/unixInit.test (unixInit-2.10): New test for fixed bug.

2003-11-04  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: added 'test' target.

2003-10-31  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclTest.c: fix test suite memory leak (backport error)
	* unix/tclUnixFile.c: ensure translated path (required for
	  correct error messages) is freed in both code paths.
	
2003-10-23  Andreas Kupries  <andreask@activestate.com>

	* unix/tclUnixChan.c (Tcl_MakeFileChannel): Applied [Patch 813606]
	  fixing [Bug 813087]. Detection of sockets was off for Mac OS X
	  which implements pipes as local sockets. The new code ensures