@@ -11,14 +11,12 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: cmdMZ.test,v 1.13.2.1 2003/10/06 13:55:37 dgp Exp $
+# RCS: @(#) $Id: cmdMZ.test,v 1.13.2.2 2003/11/12 17:29:10 hobbs Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
     namespace import -force ::tcltest::*
 }
-set tcltest::testConstraints(nonLinuxOnly) \
-	[expr {![string equal Linux $tcl_platform(os)]}]
 
 # Tcl_PwdObjCmd
 
@@ -31,10 +29,10 @@ test cmdMZ-1.2 {Tcl_PwdObjCmd: simple pwd} {
 test cmdMZ-1.3 {Tcl_PwdObjCmd: simple pwd} {
     expr [string length pwd]>0
 } 1
-test cmdMZ-1.4 {Tcl_PwdObjCmd: failure} {unixOnly nonLinuxOnly} {
-    # We don't want this test to run on Linux because they do a
-    # permissions caching trick which causes this to fail.  The
-    # caching is incorrect, but we have no control over that.
+test cmdMZ-1.4 {Tcl_PwdObjCmd: failure} {unixOnly nonPortable} {
+    # This test fails on various unix platforms (eg Linux) where
+    # permissions caching causes this to fail.  The caching is strictly
+    # incorrect, but we have no control over that.
     set foodir [file join [temporaryDirectory] foo]
     file delete -force $foodir
     file mkdir $foodir
